Add initial project structure and configuration files

--- a/Notebooks/Read_data.ipynb
+++ b/Notebooks/Read_data.ipynb
@@ -2,15 +2,244 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Read in the datasets\n",
+    "customer_seg = pd.read_csv('../Data/Bank Customer Segmentation.csv')\n",
+    "bank_additional = pd.read_csv('../Data/bank-additional-full.csv')\n",
+    "marketing_campaign = pd.read_csv('../Data/marketing_campaign.csv', sep=';')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bank Customer Segmentation:\n",
+      "  CUST_ID      BALANCE  BALANCE_FREQUENCY  PURCHASES  ONEOFF_PURCHASES  \\\n",
+      "0  C10001    40.900749           0.818182      95.40              0.00   \n",
+      "1  C10002  3202.467416           0.909091       0.00              0.00   \n",
+      "2  C10003  2495.148862           1.000000     773.17            773.17   \n",
+      "3  C10004  1666.670542           0.636364    1499.00           1499.00   \n",
+      "4  C10005   817.714335           1.000000      16.00             16.00   \n",
+      "\n",
+      "   INSTALLMENTS_PURCHASES  CASH_ADVANCE  PURCHASES_FREQUENCY  \\\n",
+      "0                    95.4      0.000000             0.166667   \n",
+      "1                     0.0   6442.945483             0.000000   \n",
+      "2                     0.0      0.000000             1.000000   \n",
+      "3                     0.0    205.788017             0.083333   \n",
+      "4                     0.0      0.000000             0.083333   \n",
+      "\n",
+      "   ONEOFF_PURCHASES_FREQUENCY  PURCHASES_INSTALLMENTS_FREQUENCY  \\\n",
+      "0                    0.000000                          0.083333   \n",
+      "1                    0.000000                          0.000000   \n",
+      "2                    1.000000                          0.000000   \n",
+      "3                    0.083333                          0.000000   \n",
+      "4                    0.083333                          0.000000   \n",
+      "\n",
+      "   CASH_ADVANCE_FREQUENCY  CASH_ADVANCE_TRX  PURCHASES_TRX  CREDIT_LIMIT  \\\n",
+      "0                0.000000                 0              2        1000.0   \n",
+      "1                0.250000                 4              0        7000.0   \n",
+      "2                0.000000                 0             12        7500.0   \n",
+      "3                0.083333                 1              1        7500.0   \n",
+      "4                0.000000                 0              1        1200.0   \n",
+      "\n",
+      "      PAYMENTS  MINIMUM_PAYMENTS  PRC_FULL_PAYMENT  TENURE  \n",
+      "0   201.802084        139.509787          0.000000      12  \n",
+      "1  4103.032597       1072.340217          0.222222      12  \n",
+      "2   622.066742        627.284787          0.000000      12  \n",
+      "3     0.000000               NaN          0.000000      12  \n",
+      "4   678.334763        244.791237          0.000000      12  \n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 8950 entries, 0 to 8949\n",
+      "Data columns (total 18 columns):\n",
+      " #   Column                            Non-Null Count  Dtype  \n",
+      "---  ------                            --------------  -----  \n",
+      " 0   CUST_ID                           8950 non-null   object \n",
+      " 1   BALANCE                           8950 non-null   float64\n",
+      " 2   BALANCE_FREQUENCY                 8950 non-null   float64\n",
+      " 3   PURCHASES                         8950 non-null   float64\n",
+      " 4   ONEOFF_PURCHASES                  8950 non-null   float64\n",
+      " 5   INSTALLMENTS_PURCHASES            8950 non-null   float64\n",
+      " 6   CASH_ADVANCE                      8950 non-null   float64\n",
+      " 7   PURCHASES_FREQUENCY               8950 non-null   float64\n",
+      " 8   ONEOFF_PURCHASES_FREQUENCY        8950 non-null   float64\n",
+      " 9   PURCHASES_INSTALLMENTS_FREQUENCY  8950 non-null   float64\n",
+      " 10  CASH_ADVANCE_FREQUENCY            8950 non-null   float64\n",
+      " 11  CASH_ADVANCE_TRX                  8950 non-null   int64  \n",
+      " 12  PURCHASES_TRX                     8950 non-null   int64  \n",
+      " 13  CREDIT_LIMIT                      8949 non-null   float64\n",
+      " 14  PAYMENTS                          8950 non-null   float64\n",
+      " 15  MINIMUM_PAYMENTS                  8637 non-null   float64\n",
+      " 16  PRC_FULL_PAYMENT                  8950 non-null   float64\n",
+      " 17  TENURE                            8950 non-null   int64  \n",
+      "dtypes: float64(14), int64(3), object(1)\n",
+      "memory usage: 1.2+ MB\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Inspect each dataset briefly\n",
+    "print(\"Bank Customer Segmentation:\")\n",
+    "print(customer_seg.head())\n",
+    "print(customer_seg.info())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Bank Additional Full:\n",
+      "  age;\"job\";\"marital\";\"education\";\"default\";\"housing\";\"loan\";\"contact\";\"month\";\"day_of_week\";\"duration\";\"campaign\";\"pdays\";\"previous\";\"poutcome\";\"emp.var.rate\";\"cons.price.idx\";\"cons.conf.idx\";\"euribor3m\";\"nr.employed\";\"y\"\n",
+      "0  56;\"housemaid\";\"married\";\"basic.4y\";\"no\";\"no\";...                                                                                                                                                                          \n",
+      "1  57;\"services\";\"married\";\"high.school\";\"unknown...                                                                                                                                                                          \n",
+      "2  37;\"services\";\"married\";\"high.school\";\"no\";\"ye...                                                                                                                                                                          \n",
+      "3  40;\"admin.\";\"married\";\"basic.6y\";\"no\";\"no\";\"no...                                                                                                                                                                          \n",
+      "4  56;\"services\";\"married\";\"high.school\";\"no\";\"no...                                                                                                                                                                          \n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 41188 entries, 0 to 41187\n",
+      "Data columns (total 1 columns):\n",
+      " #   Column                                                                                                                                                                                                                        Non-Null Count  Dtype \n",
+      "---  ------                                                                                                                                                                                                                        --------------  ----- \n",
+      " 0   age;\"job\";\"marital\";\"education\";\"default\";\"housing\";\"loan\";\"contact\";\"month\";\"day_of_week\";\"duration\";\"campaign\";\"pdays\";\"previous\";\"poutcome\";\"emp.var.rate\";\"cons.price.idx\";\"cons.conf.idx\";\"euribor3m\";\"nr.employed\";\"y\"  41188 non-null  object\n",
+      "dtypes: object(1)\n",
+      "memory usage: 321.9+ KB\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"\\nBank Additional Full:\")\n",
+    "print(bank_additional.head())\n",
+    "print(bank_additional.info())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Marketing Campaign:\n",
+      "     ID  Year_Birth   Education Marital_Status   Income  Kidhome  Teenhome  \\\n",
+      "0  5524        1957  Graduation         Single  58138.0        0         0   \n",
+      "1  2174        1954  Graduation         Single  46344.0        1         1   \n",
+      "2  4141        1965  Graduation       Together  71613.0        0         0   \n",
+      "3  6182        1984  Graduation       Together  26646.0        1         0   \n",
+      "4  5324        1981         PhD        Married  58293.0        1         0   \n",
+      "\n",
+      "  Dt_Customer  Recency  MntWines  ...  NumWebVisitsMonth  AcceptedCmp3  \\\n",
+      "0  2012-09-04       58       635  ...                  7             0   \n",
+      "1  2014-03-08       38        11  ...                  5             0   \n",
+      "2  2013-08-21       26       426  ...                  4             0   \n",
+      "3  2014-02-10       26        11  ...                  6             0   \n",
+      "4  2014-01-19       94       173  ...                  5             0   \n",
+      "\n",
+      "   AcceptedCmp4  AcceptedCmp5  AcceptedCmp1  AcceptedCmp2  Complain  \\\n",
+      "0             0             0             0             0         0   \n",
+      "1             0             0             0             0         0   \n",
+      "2             0             0             0             0         0   \n",
+      "3             0             0             0             0         0   \n",
+      "4             0             0             0             0         0   \n",
+      "\n",
+      "   Z_CostContact  Z_Revenue  Response  \n",
+      "0              3         11         1  \n",
+      "1              3         11         0  \n",
+      "2              3         11         0  \n",
+      "3              3         11         0  \n",
+      "4              3         11         0  \n",
+      "\n",
+      "[5 rows x 29 columns]\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 2240 entries, 0 to 2239\n",
+      "Data columns (total 29 columns):\n",
+      " #   Column               Non-Null Count  Dtype  \n",
+      "---  ------               --------------  -----  \n",
+      " 0   ID                   2240 non-null   int64  \n",
+      " 1   Year_Birth           2240 non-null   int64  \n",
+      " 2   Education            2240 non-null   object \n",
+      " 3   Marital_Status       2240 non-null   object \n",
+      " 4   Income               2216 non-null   float64\n",
+      " 5   Kidhome              2240 non-null   int64  \n",
+      " 6   Teenhome             2240 non-null   int64  \n",
+      " 7   Dt_Customer          2240 non-null   object \n",
+      " 8   Recency              2240 non-null   int64  \n",
+      " 9   MntWines             2240 non-null   int64  \n",
+      " 10  MntFruits            2240 non-null   int64  \n",
+      " 11  MntMeatProducts      2240 non-null   int64  \n",
+      " 12  MntFishProducts      2240 non-null   int64  \n",
+      " 13  MntSweetProducts     2240 non-null   int64  \n",
+      " 14  MntGoldProds         2240 non-null   int64  \n",
+      " 15  NumDealsPurchases    2240 non-null   int64  \n",
+      " 16  NumWebPurchases      2240 non-null   int64  \n",
+      " 17  NumCatalogPurchases  2240 non-null   int64  \n",
+      " 18  NumStorePurchases    2240 non-null   int64  \n",
+      " 19  NumWebVisitsMonth    2240 non-null   int64  \n",
+      " 20  AcceptedCmp3         2240 non-null   int64  \n",
+      " 21  AcceptedCmp4         2240 non-null   int64  \n",
+      " 22  AcceptedCmp5         2240 non-null   int64  \n",
+      " 23  AcceptedCmp1         2240 non-null   int64  \n",
+      " 24  AcceptedCmp2         2240 non-null   int64  \n",
+      " 25  Complain             2240 non-null   int64  \n",
+      " 26  Z_CostContact        2240 non-null   int64  \n",
+      " 27  Z_Revenue            2240 non-null   int64  \n",
+      " 28  Response             2240 non-null   int64  \n",
+      "dtypes: float64(1), int64(25), object(3)\n",
+      "memory usage: 507.6+ KB\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"\\nMarketing Campaign:\")\n",
+    "print(marketing_campaign.head())\n",
+    "print(marketing_campaign.info())"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
