--- a/Notebooks/Campaing_Success.ipynb
+++ b/Notebooks/Campaing_Success.ipynb
@@ -222,7 +222,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv(\"Data/digital_marketing_campaign_dataset.csv\"))\n",
+    "df = pd.read_csv(\"../Data/digital_marketing_campaign_dataset.csv\"))\n",
     "df.head()"
    ]
   },
