modify behavioral pattern

--- a/Notebooks/Behaviroral Pattern Analysis.ipynb
+++ b/Notebooks/Behaviroral Pattern Analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,8 +11,10 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "from scipy.stats import ttest_ind, f_oneway, pearsonr\n",
+    "from scipy.stats import ttest_ind, f_oneway, pearsonr, spearmanr\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
+    "\n",
+    "\n",
     "\n"
    ]
   },
@@ -37,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +121,7 @@
        "      <th>ClickThroughRate</th>\n",
        "      <th>ConversionRate</th>\n",
        "      <th>WebsiteVisits</th>\n",
-       "      <th>PagesPerVisit</th>\n",
+       "      <th>...</th>\n",
        "      <th>TimeOnSite</th>\n",
        "      <th>SocialShares</th>\n",
        "      <th>EmailOpens</th>\n",
@@ -145,7 +147,7 @@
        "      <td>0.043919</td>\n",
        "      <td>0.088031</td>\n",
        "      <td>0</td>\n",
-       "      <td>2.399017</td>\n",
+       "      <td>...</td>\n",
        "      <td>7.396803</td>\n",
        "      <td>19</td>\n",
        "      <td>6</td>\n",
@@ -169,7 +171,7 @@
        "      <td>0.155725</td>\n",
        "      <td>0.182725</td>\n",
        "      <td>42</td>\n",
-       "      <td>2.917138</td>\n",
+       "      <td>...</td>\n",
        "      <td>5.352549</td>\n",
        "      <td>5</td>\n",
        "      <td>2</td>\n",
@@ -193,7 +195,7 @@
        "      <td>0.277490</td>\n",
        "      <td>0.076423</td>\n",
        "      <td>2</td>\n",
-       "      <td>8.223619</td>\n",
+       "      <td>...</td>\n",
        "      <td>13.794901</td>\n",
        "      <td>0</td>\n",
        "      <td>11</td>\n",
@@ -217,7 +219,7 @@
        "      <td>0.137611</td>\n",
        "      <td>0.088004</td>\n",
        "      <td>47</td>\n",
-       "      <td>4.540939</td>\n",
+       "      <td>...</td>\n",
        "      <td>14.688363</td>\n",
        "      <td>89</td>\n",
        "      <td>2</td>\n",
@@ -241,7 +243,7 @@
        "      <td>0.252851</td>\n",
        "      <td>0.109940</td>\n",
        "      <td>0</td>\n",
-       "      <td>2.046847</td>\n",
+       "      <td>...</td>\n",
        "      <td>13.993370</td>\n",
        "      <td>6</td>\n",
        "      <td>6</td>\n",
@@ -255,6 +257,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>5 rows × 21 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -265,12 +268,12 @@
        "3        8003   32  Female   44085             PPC   Conversion   539.525936   \n",
        "4        8004   60  Female   83964             PPC   Conversion  1678.043573   \n",
        "\n",
-       "   ClickThroughRate  ConversionRate  WebsiteVisits  PagesPerVisit  TimeOnSite  \\\n",
-       "0          0.043919        0.088031              0       2.399017    7.396803   \n",
-       "1          0.155725        0.182725             42       2.917138    5.352549   \n",
-       "2          0.277490        0.076423              2       8.223619   13.794901   \n",
-       "3          0.137611        0.088004             47       4.540939   14.688363   \n",
-       "4          0.252851        0.109940              0       2.046847   13.993370   \n",
+       "   ClickThroughRate  ConversionRate  WebsiteVisits  ...  TimeOnSite  \\\n",
+       "0          0.043919        0.088031              0  ...    7.396803   \n",
+       "1          0.155725        0.182725             42  ...    5.352549   \n",
+       "2          0.277490        0.076423              2  ...   13.794901   \n",
+       "3          0.137611        0.088004             47  ...   14.688363   \n",
+       "4          0.252851        0.109940              0  ...   13.993370   \n",
        "\n",
        "   SocialShares  EmailOpens  EmailClicks  PreviousPurchases  LoyaltyPoints  \\\n",
        "0            19           6            9                  4            688   \n",
@@ -279,15 +282,17 @@
        "3            89           2            2                  0           2463   \n",
        "4             6           6            6                  8           4345   \n",
        "\n",
-       "  AdvertisingPlatform AdvertisingTool  Conversion  Cluster_Label  \n",
-       "0            IsConfid      ToolConfid           1              3  \n",
-       "1            IsConfid      ToolConfid           1              2  \n",
-       "2            IsConfid      ToolConfid           1              3  \n",
-       "3            IsConfid      ToolConfid           1              4  \n",
-       "4            IsConfid      ToolConfid           1              4  "
+       "   AdvertisingPlatform AdvertisingTool Conversion  Cluster_Label  \n",
+       "0             IsConfid      ToolConfid          1              3  \n",
+       "1             IsConfid      ToolConfid          1              2  \n",
+       "2             IsConfid      ToolConfid          1              3  \n",
+       "3             IsConfid      ToolConfid          1              4  \n",
+       "4             IsConfid      ToolConfid          1              4  \n",
+       "\n",
+       "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -318,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -438,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -880,7 +885,7 @@
        "5  28.252265  "
       ]
      },
-     "execution_count": 51,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -896,13 +901,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -918,10 +918,10 @@
    ],
    "source": [
     "\n",
-    "# ✅ Compute the correlation matrix\n",
+    "# Compute the correlation matrix\n",
     "corr_matrix = segmented_df[behavior_cols].corr()\n",
     "\n",
-    "# ✅ Plot the heatmap\n",
+    "# Plot the heatmap\n",
     "plt.figure(figsize=(12, 8))\n",
     "sns.heatmap(corr_matrix, annot=True, fmt=\".2f\", cmap='coolwarm', square=True, linewidths=0.5, cbar_kws={\"shrink\": 0.8})\n",
     "\n",
@@ -932,7 +932,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1068,7 +1068,7 @@
        "13       SocialShares       1.0089   0.4106"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1115,7 +1115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1143,7 +1143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1193,7 +1193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1212,7 +1212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1227,7 +1227,6 @@
     }
    ],
    "source": [
-    "\n",
     "# Boxplots for Product Usage by Cluster\n",
     "plt.figure(figsize=(14, 6))\n",
     "for i, feature in enumerate(['PreviousPurchases', 'LoyaltyPoints']):\n",
@@ -1253,7 +1252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1268,10 +1267,7 @@
     }
    ],
    "source": [
-    "import seaborn as sns\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "# Example: Pareto within cluster\n",
+    "# Pareto within cluster\n",
     "for cluster in segmented_df['Cluster_Label'].unique():\n",
     "    cluster_data = segmented_df[segmented_df['Cluster_Label'] == cluster]\n",
     "    sorted_purchases = cluster_data['PreviousPurchases'].sort_values(ascending=False).reset_index(drop=True)\n",
@@ -1298,7 +1294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1364,7 +1360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1389,9 +1385,6 @@
     }
    ],
    "source": [
-    "import seaborn as sns\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
     "# Plot for CLV with normalization\n",
     "plt.figure(figsize=(10, 6))\n",
     "sns.kdeplot(data=segmented_df, x='CLV', hue='Cluster_Label', fill=True, palette='Set2', common_norm=False)\n",
@@ -1424,7 +1417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1437,8 +1430,6 @@
     }
    ],
    "source": [
-    "from scipy.stats import pearsonr, spearmanr\n",
-    "\n",
     "# Pearson Correlation\n",
     "pearson_corr, pearson_p = pearsonr(segmented_df['ConversionRate'], segmented_df['CLV'])\n",
     "print(f\"Pearson Correlation: {pearson_corr:.3f}, p-value: {pearson_p:.4f}\")\n",
@@ -1459,7 +1450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1504,7 +1495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1590,7 +1581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1607,9 +1598,6 @@
    "source": [
     "# Prepare the average email engagement dataframe\n",
     "email_avg = segmented_df.groupby('Cluster_Label')[['EmailOpens', 'EmailClicks', 'ClickThroughRate']].mean().reset_index()\n",
-    "\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
     "\n",
     "fig, ax1 = plt.subplots(figsize=(12, 6))\n",
     "\n",
@@ -1657,7 +1645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1671,7 +1659,7 @@
    ],
    "source": [
     "\n",
-    "# ✅ 6. Correlation test: EmailOpens impact on ClickThroughRate\n",
+    "# Correlation test: EmailOpens impact on ClickThroughRate\n",
     "from scipy.stats import pearsonr\n",
     "pearson_corr, pval = pearsonr(segmented_df['EmailOpens'], segmented_df['ClickThroughRate'])\n",
     "print(f\"\\nPearson Correlation between EmailOpens and CTR: {pearson_corr:.4f}, p-value = {pval:.4f}\")"
