update pure code file

--- a/Notebooks/Segmentation_green.ipynb
+++ b/Notebooks/Segmentation_green.ipynb
@@ -28,8 +28,6 @@
     "from sklearn.preprocessing import StandardScaler\n",
     "from scipy.stats import skew, boxcox, yeojohnson\n",
     "from datetime import datetime\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
     "from scipy.cluster.hierarchy import dendrogram, linkage\n",
     "from scipy.stats import zscore \n"
    ]
@@ -40,7 +38,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('../Data/digital_marketing_campaign_dataset.csv')"
+    "df = pd.read_csv('../Data/digital_marketing_campaign_dataset.csv')\n",
+    "df_original = pd.read_csv('../Data/digital_marketing_campaign_dataset.csv')\n",
+    "df_drop = df_original.drop(columns = ['AdvertisingPlatform', 'AdvertisingTool','CustomerID'])\n",
+    "columns_to_encode = ['Gender', 'CampaignChannel', 'CampaignType']\n",
+    "df_encoded = pd.get_dummies(df_drop, columns=columns_to_encode, drop_first=False)\n",
+    "scalar = StandardScaler()\n",
+    "df_scaled = scalar.fit_transform(df_encoded)\n"
    ]
   },
   {
@@ -49,72 +53,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_original = pd.read_csv('../Data/digital_marketing_campaign_dataset.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_drop = df.drop(columns = ['AdvertisingPlatform', 'AdvertisingTool','CustomerID'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = df_drop"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "columns_to_encode = ['Gender', 'CampaignChannel', 'CampaignType']\n",
-    "df_encoded = pd.get_dummies(df, columns=columns_to_encode, drop_first=False)\n",
-    "df = df_encoded"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "scalar = StandardScaler()\n",
-    "df_scaled = scalar.fit_transform(df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "pca_range = range(2, min(df_scaled.shape[1], 10) + 1)  # from 2 to either 10 or number of features\n",
     "\n",
-    "# Define k-range for K-Means\n",
-    "k_range = range(2, 11)\n",
-    "\n",
-    "# Initialize variables to store the best configuration\n",
+    "k_range = range(2, 15)\n",
     "overall_best_sil = -np.inf\n",
     "best_pca_n = None\n",
     "best_k_for_best = None\n",
-    "best_scores_for_best = None"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "best_scores_for_best = None\n",
     "# Loop over different numbers of PCA components\n",
     "for n_components in pca_range:\n",
     "    # Apply PCA with n_components\n",
@@ -142,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -150,6 +95,8 @@
      "output_type": "stream",
      "text": [
       "Best number of PCA components: 2\n",
+      "Explained variance by 2 PCA components: [0.08034666 0.05788138 0.05388244 0.05345779 0.05144862 0.0508823\n",
+      " 0.05030133 0.04954703 0.04887433 0.04279948]\n",
       "Best k (clusters) for that PCA configuration: 6\n",
       "Overall best silhouette score: 0.6917106071593926\n"
      ]
@@ -158,115 +105,26 @@
    "source": [
     "# Print the best configuration found\n",
     "print(\"Best number of PCA components:\", best_pca_n)\n",
+    "print(\"Explained variance by 2 PCA components:\", pca.explained_variance_ratio_)\n",
     "print(\"Best k (clusters) for that PCA configuration:\", best_k_for_best)\n",
     "print(\"Overall best silhouette score:\", overall_best_sil)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "pca_best = PCA(n_components=best_pca_n, random_state=42)\n",
-    "df_pca_best = pca_best.fit_transform(df_scaled)"
+    "df_pca = pca_best.fit_transform(df_scaled)\n",
+    "kmeans = KMeans(n_clusters=best_k_for_best, random_state=42)\n",
+    "labels = kmeans.fit_predict(df_pca)  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Explained variance by 2 PCA components: [0.08034666 0.05788138]\n"
-     ]
-    }
-   ],
-   "source": [
-    "pca = PCA(n_components=2, random_state=42)\n",
-    "df_pca = pca.fit_transform(df_scaled)\n",
-    "\n",
-    "print(\"Explained variance by 2 PCA components:\", pca.explained_variance_ratio_)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Test K-Means silhouette scores on the best PCA configuration\n",
-    "scores_best = []\n",
-    "for k in k_range:\n",
-    "    kmeans_best = KMeans(n_clusters=k, random_state=42)\n",
-    "    labels_best = kmeans_best.fit_predict(df_pca_best)\n",
-    "    sil_best = silhouette_score(df_pca_best, labels_best)\n",
-    "    scores_best.append((k, sil_best))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Clusters: 2, Silhouette Score: 0.6042, Inertia: 11657.0408\n",
-      "Clusters: 3, Silhouette Score: 0.5942, Inertia: 7247.3669\n",
-      "Clusters: 4, Silhouette Score: 0.6018, Inertia: 4592.8428\n",
-      "Clusters: 5, Silhouette Score: 0.6518, Inertia: 2657.7026\n",
-      "Clusters: 6, Silhouette Score: 0.6917, Inertia: 1437.0185\n",
-      "Clusters: 7, Silhouette Score: 0.6138, Inertia: 1078.5732\n",
-      "Clusters: 8, Silhouette Score: 0.5596, Inertia: 846.2990\n",
-      "Clusters: 9, Silhouette Score: 0.5353, Inertia: 703.9258\n"
-     ]
-    }
-   ],
-   "source": [
-    "range_n_clusters = range(2, 10)\n",
-    "silhouette_scores = {}\n",
-    "inertia_values = {}\n",
-    "\n",
-    "for n_clusters in range_n_clusters:\n",
-    "    kmeans = KMeans(n_clusters=n_clusters, random_state=42, n_init=10)\n",
-    "    labels = kmeans.fit_predict(df_pca)\n",
-    "    sil_score = silhouette_score(df_pca, labels)\n",
-    "    inertia = kmeans.inertia_\n",
-    "    \n",
-    "    silhouette_scores[n_clusters] = sil_score\n",
-    "    inertia_values[n_clusters] = inertia\n",
-    "    \n",
-    "    print(f\"Clusters: {n_clusters}, Silhouette Score: {sil_score:.4f}, Inertia: {inertia:.4f}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "\n",
-    "# Set the number of clusters to 6\n",
-    "kmeans = KMeans(n_clusters=6, random_state=42)\n",
-    "\n",
-    "# Fit KMeans and predict cluster labels\n",
-    "labels = kmeans.fit_predict(df_pca)  \n",
-    "\n",
-    "# Add the cluster labels to the original dataframe\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -319,48 +177,24 @@
     }
    ],
    "source": [
-    "\n",
-    "# 1. Set number of clusters explicitly\n",
-    "n_clusters = 6\n",
-    "\n",
-    "# 2. Verify your KMeans was fitted with 6 clusters\n",
-    "assert kmeans.n_clusters == n_clusters, \"KMeans was not fitted with 6 clusters!\"\n",
-    "\n",
-    "# 3. Get centroids in PCA space (shape: [6, n_components])\n",
+    "# 1. Get centroids in PCA-transformed space\n",
     "pca_centroids = kmeans.cluster_centers_\n",
     "\n",
-    "# 4. Inverse transform to standardized feature space\n",
-    "centroids_standardized = pca.inverse_transform(pca_centroids)\n",
+    "# 2. Inverse transform using the correct PCA model\n",
+    "centroids_standardized = pca_best.inverse_transform(pca_centroids)  # Use pca_best, not pca\n",
     "\n",
-    "# 5. Verify dimensions before proceeding\n",
-    "n_features = len(df.columns)\n",
-    "assert centroids_standardized.shape == (n_clusters, n_features), \\\n",
-    "    f\"Dimension mismatch! Expected {(n_clusters, n_features)}, got {centroids_standardized.shape}\"\n",
-    "\n",
-    "# 6. Reverse standardization\n",
+    "# 3. Reverse standardization to map back to original feature space\n",
     "centroids_original = centroids_standardized * scalar.scale_ + scalar.mean_\n",
     "\n",
-    "# 7. Create DataFrame with proper validation\n",
-    "centroids_original_df = pd.DataFrame(\n",
-    "    centroids_original,\n",
-    "    columns=df.columns\n",
-    ")\n",
+    "# 4. Create DataFrame for better readability\n",
+    "centroids_df = pd.DataFrame(centroids_original, columns=df_encoded.columns)\n",
     "\n",
-    "# 8. Add cluster labels (0-5 for 6 clusters)\n",
-    "centroids_original_df.insert(0, 'Cluster', range(n_clusters))\n",
+    "# 5. Add cluster labels (0, 1, ..., k-1)\n",
+    "centroids_df.insert(0, 'Cluster', range(best_k_for_best))\n",
     "\n",
-    "# 9. Display results\n",
+    "# 6. Display results\n",
     "print(\"Final Cluster Centroids in Original Feature Space:\")\n",
-    "print(centroids_original_df.round(2))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df['Cluster_Label'] = labels  "
+    "print(centroids_df.round(2))\n"
    ]
   }
  ],
